# highlandPD

./: .gitignore  .todo  CMakeLists.txt
cmake/modules/: HighlandPDConfiguration.cmake  cvmfs-config.cmake  eigen-config.cmake  hprotobuf-config.cmake  protobuf-config.cmake  tensorflow-config.cmake
cmake/scripts/: HIGHLAND_PDConfig.cmake.in
k0_preliminary/: CollectK0Masses.C  EventsK0.C  K0ReconstructionAnalysis.C  K0Statistics.C  LongPions.C  LongPionsK0Length.C  LongPionsK0Mass.C  PreliminaryK0Selection.C  PreliminaryK0SelectionStatistic.C  StartEndInversionAnalysis.C  VertexDisplayAnalysis.C  run_collect_masses.sh  run_k0statistics.sh  run_longpions.sh  run_longpions_k0length.sh  run_longpions_k0mass.sh  run_preliminary_k0_selection.sh  run_preliminary_k0_statistics.sh  run_start_end_inversion_analysis.sh  run_vertex_display.sh
scripts/: DOALL.sh  INSTALL.sh  chrootmap  cleanup.sh  setup.sh
src/BeamWeights/src/: BeamWeights.cxx  BeamWeights.cxx~  BeamWeights.hxx  BeamWeights.hxx~  BeamWeightsSelection.cxx~  BeamWeightsSelection.hxx~
src/BeamWeightsAnalysis/app/: RunBeamWeights.cxx
src/BeamWeightsAnalysis/src/: BeamWeights.cxx  BeamWeightsSelection.cxx  BeamWeightsSelection.hxx
src/BrokenTracks/parameters/: BrokenTracks.parameters.dat~
src/BrokenTracks/src/: BrokenTracks.cxx  BrokenTracks.cxx~  BrokenTracks.hxx  BrokenTracksSelection.cxx  BrokenTracksSelection.cxx~  BrokenTracksSelection.hxx~
src/BrokenTracksAnalysis/app/: RunBrokenTracks.cxx
src/BrokenTracksAnalysis/src/: #BrokenTracksSelection.cxx#  BrokenTracks.cxx  BrokenTracks.hxx  BrokenTracksSelection.cxx  BrokenTracksSelection.hxx
src/LArSoftReader/src/: createVersion.py
src/QPIXAnalysis/app/: RunQPIXAnalysis.cxx
src/QPIXAnalysis/src/: QPIXAnalysis.cxx  QPIXAnalysis.cxx~  QPIXAnalysis.hxx  QPIXAnalysis.hxx~  QPIXDataClasses.cxx  QPIXDataClasses.cxx~  QPIXDataClasses.hxx  QPIXDataClasses.hxx~  QPIXSelection.cxx  QPIXSelection.hxx  QPIXTreeConverter.cxx  QPIXTreeConverter.cxx~  QPIXTreeConverter.hxx  QPIXTreeConverter.hxx~  QPIXUtils.cxx  QPIXUtils.cxx~  QPIXUtils.hxx  QPIXUtils.hxx~
src/StoppingProtonAnalysis/app/: RunStoppingProtonAnalysis.cxx
src/StoppingProtonAnalysis/parameters/: #StoppingProtonAnalysis.parameters.dat#
src/StoppingProtonAnalysis/src/: StoppingProtonAnalysis.cxx  StoppingProtonAnalysis.hxx  StoppingProtonSelection.cxx  StoppingProtonSelection.hxx
src/dEdxCalibration/app/: RunCreateMichelRemovingMiniTree.cxx  RundEdxCalibration.cxx  RundQdxYZCalibration.cxx
src/dEdxCalibration/data/: x_corrections_v2.root  x_corrections_xz-0-30_yz-0-40.root  x_corrections_xz-0-30_yz-0-80.root  x_corrections_xz-0-30_yz-40-80.root  x_corrections_xz-0-60_yz-0-40.root  x_corrections_xz-0-60_yz-40-80.root  x_corrections_xz-30-60_yz-0-40.root  x_corrections_xz-30-60_yz-0-80.root  x_corrections_xz-30-60_yz-40-80.root  yz_corrections.root  yz_corrections_v2.root  yz_corrections_xz-0-30_yz-0-40.root  yz_corrections_xz-0-30_yz-0-80.root  yz_corrections_xz-0-30_yz-40-80.root  yz_corrections_xz-0-60_yz-0-40.root  yz_corrections_xz-0-60_yz-40-80.root  yz_corrections_xz-30-60_yz-0-40.root  yz_corrections_xz-30-60_yz-0-80.root  yz_corrections_xz-30-60_yz-40-80.root  yz_corrections_xz-from-0-to-30_yz-from-0-to-40.root  yz_corrections_xz-from-0-to-30_yz-from-40-to-80.root  yz_corrections_xz-from-0-to-30_yz-full.root  yz_corrections_xz-from-30-to-60_yz-from-0-to-40.root  yz_corrections_xz-from-30-to-60_yz-from-40-to-80.root  yz_corrections_xz-from-30-to-60_yz-full.root  yz_corrections_xz-full_yz-from-0-to-40.root  yz_corrections_xz-full_yz-from-40-to-80.root
src/dEdxCalibration/macros/: toy_x_branch.C  toy_yz.C  toy_yz_branch.C  yz.C
src/dEdxCalibration/src/: CreateMichelRemovingMiniTree.cxx  CreateMichelRemovingMiniTree.hxx  EventBoxdEdx.cxx  EventBoxdEdx.hxx  ToyBoxdEdx.cxx  ToyBoxdEdx.hxx  dEdxCalibration.cxx  dEdxCalibration.hxx  dEdxTrackSelection.cxx  dEdxTrackSelection.hxx  dEdxUtils.hxx  dQdxXCalibration.cxx  dQdxXCalibration.hxx  dQdxYZCalibration.cxx  dQdxYZCalibration.hxx
src/dEdxCalibrationAnalysis/app/: RundQdxXCalibration.cxx
src/dEdxCalibrationAnalysis/macros/: binning.C  corr.C  maps.C  toy_x_branch.C  toy_x_branch_histos.C  toy_yz.C  toy_yz_branch_histos.C  toy_yz_branch_median.C  x.C
src/dEdxCalibrationAnalysis/src/: EventBoxdEdx.hxx  dEdxCalibration.hxx  dEdxTrackSelection.cxx  dEdxTrackSelection.hxx  (+4 more)
src/pdSystematics/: BeamCompositionWeight.hxx  BeamMomVariation.cxx2  LifetimeVariation.cxx  LifetimeVariation.hxx  dEdxVariation.hxx  dQdxCalibVariation.cxx
src/pionAnalysis/: CMakeLists.txt
src/pionAnalysis/app/: RunPionAnalysis.cxx
src/pionAnalysis/cmake/modules/: FindHIGHLAND.cmake
src/pionAnalysis/cmake/scripts/: CMakeLists.txt
src/pionAnalysis/macros/: jake-aps.C
src/pionAnalysis/scripts/: INSTALL.sh  cleanup.sh  setup.sh
src/pionAnalysis/src/: CreateMiniTreePionAna.cxx  CreateMiniTreePionAna.hxx  pionAnalysis.cxx  pionAnalysis.hxx  pionAnalysisUtils.cxx  pionAnalysisUtils.hxx  pionSelection.cxx  pionSelection.hxx  pionTreeConverter.cxx  pionTreeConverter.hxx
src/pionAnalysis/src/corrections/: BeamMomCorrection.cxx  BeamMomCorrection.hxx  BeamMomSmearingCorrection.cxx  BrokenTrackDataCorrection.cxx  CryoWallBeamMomCorrection.cxx  HitPositionSCECorrection.cxx  dEdxCorrection.cxx  dEdxCorrection.hxx  dEdxDataCorrection.cxx
src/pionAnalysis/src/systematics/: BeamCompositionWeight.cxx  BeamMomVariation.hxx  DerivedQuantitiesVariation.cxx  DerivedQuantitiesVariation.hxx  HitVariation.cxx  HitVariation.hxx  LengthVariation.cxx  LengthVariation.hxx  LifetimeVariation.cxx  LifetimeVariation.hxx  RecombinationVariation.cxx  RecombinationVariation.hxx  TrackEffWeight.cxx  dEdxCalibVariation.cxx  dEdxCalibVariation.hxx  dEdxVariation.cxx  dQdxCalibVariation.cxx  dQdxCalibVariation.hxx
src/unusedCodeToRevisit/: CNNVariation.hxx_anselmo  dEdxCalibVariation.cxx_anselmo  dQdxCalibVariation.cxx_anselmo  pdMVA.hxx_back  secondaryKaonFromBeamSelection.cxx  secondaryKaonFromBeamSelection.hxx  secondaryKaonFromCosmicSelection.cxx  secondaryKaonFromCosmicSelection.hxx
(+1658 files in other folders)
